--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -843,12 +843,12 @@
     border-top: 1px #14fdce solid;
 }
 
-.kiwi-statebrowser-usermenu-avatar:hover .kiwi-avatar-circle,
-.kiwi-statebrowser-usermenu--open .kiwi-avatar-circle {
+.kiwi-statebrowser-usermenu-avatar:hover .kiwi-avatar-background,
+.kiwi-statebrowser-usermenu--open .kiwi-avatar-background {
     fill: #5dd895 !important;
 }
 
-.kiwi-avatar-circle {
+.kiwi-avatar-background {
     fill: #57da93;
 }
 
